Mobile responsiveness Fixed an issu where user avatar was not showing against user recorded message

--- a/kisan-e-mitra/Content/Botchat.css
+++ b/kisan-e-mitra/Content/Botchat.css
@@ -1,15 +1,7 @@
 ﻿.chat-container {
     display: flex;
     flex-direction: column;
-    /*background-color: rgb(246, 249, 254) !important;*/
-    /*background-color: #FFFFFF !important;*/
     height: calc(100vh - 146px); /* excluding the height of the header */
-    /*border: 1px solid rgba(0,0,0,0);
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    border-right: 1px solid #d1d1d1;
-    box-shadow: 2px 2px rgba(0,0,0,0.1);*/
-    /*margin-bottom: 60px;*/
 }
 
 .record-voice {
@@ -28,13 +20,10 @@
 .message-list {
     flex-grow: 1;
     overflow-y: auto;
-    /*padding: 15px 0px;*/
 }
 
 .message {
     display: flex;
-    align-items: flex-start;
-    /*margin-bottom: 10px;*/
 }
 
 
@@ -44,26 +33,16 @@
 }
 
 .user-msg-left {
-    /*background-color: #FFFFFF;*/
     border-bottom: 1px solid #d1d1d1;
-    padding: 30px 100px;
+    padding: 2% 5%;
 }
 
 .system-msg-left {
     background-color: #F7F7F8;
     border-bottom: 1px solid #d1d1d1;
-    padding: 30px 100px;
+    padding: 2% 5%;
 }
-
-/*
-.right {
-    justify-content: flex-end;
-    margin-left: 10%;
-    padding: 15px;
-}
-*/
 .message-content {
-    /*background-color: #fff;*/
     padding: 10px;
     border-radius: 25px;
     line-break: anywhere;
@@ -72,14 +51,13 @@
 .input-container {
     display: flex;
     align-items: center;
-    /*margin-top: -10px;*/
     z-index: 999999;
     padding: 15px;
 }
 
 .message-input {
     flex-grow: 1;
-    padding-left: 25px;
+    padding-left: 5%;
     border: 1px solid #ccc;
     border-radius: 40px;
     height: 60px;
@@ -299,13 +277,13 @@ button[type="submit"] {
         opacity: 1;
     }
 
-    button[type="submit"]:focus,
-    input[type="submit"]:focus {
-        box-shadow: 0 0 3px 0 #1183d6;
-        border-color: #1183d6;
-        outline: none;
-        fill:green;
-    }
+button[type="submit"]:focus,
+input[type="submit"]:focus {
+    box-shadow: 0 0 3px 0 #1183d6;
+    border-color: #1183d6;
+    outline: none;
+    fill: green;
+}
 
 table.aadhar-table {
     margin-bottom: 0px;
@@ -313,4 +291,9 @@ table.aadhar-table {
 
 .aadhar-table tbody tr td:first-child {
     font-weight: bold;
+    font-size: 0.8em;
+}
+
+.user-avatar-img {
+    background-color: #219653;
 }
